--- a/chillax.css
+++ b/chillax.css
@@ -15,7 +15,8 @@
 
 /****CHILLAX COMPONENTS****/
 @import url("https://warrayquipsome.github.io/Chillax/Components/WindowsButtons.css");
-@import url("https://warrayquipsome.github.io/Chillax/Components/UserArea.css");
+/* @import url("https://warrayquipsome.github.io/Chillax/Components/UserArea.css"); */
+@import url("https://github.com/DTilley22/ChillaxEdits/blob/main/Components/UserArea.css");
 @import url("https://warrayquipsome.github.io/Chillax/Components/Embeds.css");
 @import url("https://warrayquipsome.github.io/Chillax/Components/ChatArea.css");
 @import url("https://warrayquipsome.github.io/Chillax/Components/ChannelHeader.css");
