--- a/Components/ChatArea.css
+++ b/Components/ChatArea.css
@@ -71,7 +71,7 @@
 .unreadPill__908e2 {
     background-color: var(--background-shading);
     color: #fb5454;
-    font-size: 12px;
+    /* font-size: 12px; */
     letter-spacing: 20px;
     right: 50%;
     left: 50%;
@@ -107,7 +107,7 @@ html.theme-light .wrapper_f7ecac {
 
 /*channel resize*/
 .sidebar__5e434 .name__2ea32 {
-    font-size: 14px;
+    /* font-size: 14px; */
 }
 
 .sidebar__5e434 .icon__2ea32 {
