--- a/chillax.css
+++ b/chillax.css
@@ -15,10 +15,9 @@
 
 /****CHILLAX COMPONENTS****/
 @import url("https://warrayquipsome.github.io/Chillax/Components/WindowsButtons.css");
-/* @import url("https://warrayquipsome.github.io/Chillax/Components/UserArea.css"); */
 @import url("https://github.com/DTilley22/ChillaxEdits/blob/main/Components/UserArea.css");
 @import url("https://warrayquipsome.github.io/Chillax/Components/Embeds.css");
-@import url("https://warrayquipsome.github.io/Chillax/Components/ChatArea.css");
+@import url("https://github.com/DTilley22/ChillaxEdits/blob/main/Components/ChatArea.css");
 @import url("https://warrayquipsome.github.io/Chillax/Components/ChannelHeader.css");
 @import url("https://warrayquipsome.github.io/Chillax/Components/EmojiPicker.css");
 
